adding class elements, creating nav bar links, adjusting border sizes, adding variables to css

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         </div>
     </section>
     </main>
+    <footer>
+        <h3>Made By Abdul Mohamed</h3>
+        <p>
+            &copy; 2021 Abdul Mohamed
+        </p>
+    </footer>
 </body>
     
 
