adding margins padding, adjusting borders in the nav, applying hover to nav and contact me sections

--- a/index.html
+++ b/index.html
@@ -29,22 +29,59 @@
     </header>
     <main>
         <!-- about me section -->
-        <section>
-            <h2>About Me</h2>
-            <img>
-            <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles. Ma quande lingues coalesce, li grammatica del resultant lingue es plu simplic e regulari quam ti del coalescent lingues. Li nov lingua franca va esser plu simplic e regulari quam li existent Europan lingues.</p>
-
+        <section class="container" id="about-me">
+            <h2 class="container-title">About Me</h2>
+            <div class="content">
+                <div>
+                    <img class= "selfie" src="./assets/images/selfiee.jpeg" alt="my picture">
+                </div>
+                <p>
+                    Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles. Ma quande lingues coalesce, li grammatica del resultant lingue es plu simplic e regulari quam ti del coalescent lingues. Li nov lingua franca va esser plu simplic e regulari quam li existent Europan lingues.
+                </p>
+            </div>
         </section>
     <!-- projects section -->
-    <section>
-        <h2> My Projects</h2>
-        <div>
+    <section class="container" id="projects">
+        <h2 class="container-title">
+            My Projects
+        </h2>
+        <div class="project-trio">
+            <article>
+                <a href="https://amohamed77.github.io/Homework-01/"  target="_blank" class="project-image">
+                    <img src="./assets/images/code refactor.png" alt="Coming Soon" class="projectpics" />
+                    <div class="description">
+                        <h3>Code Refactor</h3>
+                        <p>Refactoring for accessability</p>
+                    </div>
+                </a>
+                <a href="./assets/images/staytuned.jpeg"  target="_blank" class="project-image">
+                    <img src="./assets/images/staytuned.jpeg" alt="Stay Tuned" class="projectpics" />
+                    <div class="description">
+                        <h3>?????????</h3>
+                        <p>Stay Tuned</p>
+                    </div>
+                </a>
+                <a href="./assets/images/staytuned.jpeg"   class="project-image">
+                    <img src="./assets/images/staytuned.jpeg" target="_blank" alt="Stay Tuned" class="projectpics" />
+                    <div class="description">
+                        <h3>?????????</h3>
+                        <p>Stay Tuned</p>
+                    </div>
+                </a>
+                <a href="./assets/images/staytuned.jpeg"  target="_blank" class="project-image">
+                    <img src="./assets/images/staytuned.jpeg" alt="Stay Tuned" class="projectpics" />
+                    <div class="description">
+                        <h3>?????????</h3>
+                        <p>Stay Tuned</p>
+                    </div>
+                </a>
+            </article>
         </div>
     </section>
 
     <!-- contact me section -->
-    <section>
-        <h2>
+    <section class="container">
+        <h2 class="container-title">
             Contact Me
         </h2>
         <div class="contact">
